@@ -10,10 +10,11 @@ import com.baiyi.opscloud.domain.param.application.ApplicationParam;
 import com.baiyi.opscloud.service.application.ApplicationResourceService;
 import com.baiyi.opscloud.service.application.ApplicationService;
 import com.baiyi.opscloud.service.user.UserPermissionService;
+import com.google.common.base.Splitter;
+import jakarta.annotation.Resource;
 import org.junit.jupiter.api.Test;
 import org.springframework.util.CollectionUtils;
 
-import jakarta.annotation.Resource;
 import java.util.List;
 
 /**
@@ -67,7 +68,31 @@ public class ApplicationTest extends BaseUnit {
                 }
             });
         });
-
-
     }
+
+    @Test
+    public void test() {
+        // 模拟一些JVM参数
+        String javaOpts = "java -Dfile.encoding=UTF-8 -Xms4096M -Xmx4096M -Xmn2048M -XX:MetaspaceSize=128M -XX:MaxMetaspaceSize=256M -Xss256K -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDateStamps -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -XX:+UseCMSInitiatingOccupancyOnly";
+
+        // TODO 1 插入参数 -XX:CMSInitiatingOccupancyFraction=80 ；需判断是否存在
+
+        // TODO 2 修改参数 -Xmx4096M 为 -Xmx8096M
+
+        List<String> opts = Splitter.on(" ").splitToList(javaOpts);
+
+        StringBuilder sb = new StringBuilder();
+        for (String opt : opts) {
+            System.out.println(opt);
+            // 匹配前缀
+            if(opt.startsWith("-Xmx")){
+                opt = "-Xmx8096M";
+            }
+            // 首次append会在头部添加一个多余的空格
+            sb.append(" ").append(opt);
+        }
+        // trim() 去除首尾空格
+        System.out.println(sb.toString().trim());
+    }
+
 }
